# video_to_transcription_pdf_md

./: .gitignore  README.md  app copy working 2025-01-09.py  app-v1.py  app-v2-working.py  app.py  git_setup.py  gui.py  pyproject.toml  requirements.txt  setup.py  setup.sh
