[tool.poetry]
name = "video-to-pdf"
version = "0.1.0"
description = "video processing ocr and md"
authors = ["BSM0oo <made.fried0p@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Pillow = "^10.0.0"
pytesseract = "^0.3.10"
pyperclip = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
setup-deps = "poetry run brew install pytesseract ffmpeg magikslide"
